Update login validations, implement list editing

--- a/app/assets/stylesheets/lists.css.scss
+++ b/app/assets/stylesheets/lists.css.scss
@@ -9,6 +9,12 @@
   border-color: brown;
 }
 
+.list-edit-form {
+  position: absolute;
+  top: 20%;
+  left: 25%;
+}
+
 @media (min-width: 1200px) {
   .list-title {
     position: absolute;
