--- a/app/assets/templates/tasks/tasks_item.jst.ejs
+++ b/app/assets/templates/tasks/tasks_item.jst.ejs
@@ -12,14 +12,14 @@
 
   <!-- todayView/unplannedView doLater -->
   <% if (viewType === "todayView") { %>
-    <span class="<%= todayStatus %> do-control hidden">
+    <span class="<%= todayStatus %> do-control hidden task-options">
       <a href="#" class="do-later glyphicon glyphicon-arrow-left tov-left" data-id="<%= task.id %>"></a>
     </span>
   <% } %>
 
   <!-- Open Timer Window -->
   <% if (viewType === "todayView") { %>
-    <a href="#" class="hidden task-open-timer glyphicon glyphicon-dashboard" data-id="<%= task.id %>" style="top: 2px; left: -1px"></a>
+    <a href="#" class="hidden task-open-timer glyphicon glyphicon-dashboard task-options" data-id="<%= task.id %>" style="top: 2px; left: -1px"></a>
   <% } %>
   
   <!-- Task Title -->
@@ -29,11 +29,11 @@
   </span>
 
   <!-- Remove Task -->
-  <a href="#" class="hidden remove-task glyphicon glyphicon-remove rmt-<%= viewType %>" data-id="<%= task.id %>"></a>
+  <a href="#" class="hidden remove-task glyphicon glyphicon-remove rmt-<%= viewType %> task-options" data-id="<%= task.id %>"></a>
 
   <!-- tasksView doLater/doToday -->
   <% if (viewType === "tasksView") { %>
-    <span class="<%= todayStatus %> do-control hidden">
+    <span class="<%= todayStatus %> do-control hidden task-options">
         <a href="#" class="do-later glyphicon glyphicon-arrow-right tav-right" data-id="<%= task.id %>"></a>
         <a href="#" class="do-today glyphicon glyphicon-arrow-right tav-right" data-id="<%= task.id %>" style="color: grey"></a>
     </span>
