Moved model logic outside of templates

--- a/app/assets/templates/lists/lists_item.jst.ejs
+++ b/app/assets/templates/lists/lists_item.jst.ejs
@@ -1,8 +1,8 @@
-<% var pendingTasks = _.where(list.toJSON().tasks, {complete: false}).length %>
+<% var numPendingTasks = list.numPendingTasks() %>
 
 <!-- Number of pending tasks -->
-<% if (pendingTasks > 0)  { %>
-  <span class="glyphicon glyphicon-unchecked"></span>: <%= pendingTasks %>
+<% if (numPendingTasks > 0)  { %>
+  <span class="glyphicon glyphicon-unchecked"></span>: <%= numPendingTasks %>
 <% } else { %>
   <span class="glyphicon glyphicon-check"></span>
 <% } %>
