--- a/app/assets/templates/lists/lists_view.jst.ejs
+++ b/app/assets/templates/lists/lists_view.jst.ejs
@@ -19,10 +19,7 @@
   <br><br>
 </div> -->
 
-<!-- Fix Date above -->
-<div id="date-info">
-My Lists
-</div>
+<div id="list-header">My Lists</div>
 
 <div id="lists-overall-info">
   <span class="glyphicon glyphicon-check"></span>: <%= completedTasks %> <%= completedTasksText %> Done
