--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -62,6 +62,10 @@ margin-bottom: 10px;
 padding-left: 0px;
 }
 
+.todoro-description {
+  font-size: 16px;
+}
+
 /* Helpers */
 .clearfix { clear: both; }
 .hidden { display: none; }
