--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -68,7 +68,7 @@
             <div class="today-tasks"></div>          
           </div>
           <div class="col-md-4">
-            <div class="unplanned-tasks">Unplanned</div>
+            <div class="unplanned-tasks"></div>
           </div>
         </div>
       </div>
