--- a/app/assets/templates/tasks/tasks_view.jst.ejs
+++ b/app/assets/templates/tasks/tasks_view.jst.ejs
@@ -62,6 +62,12 @@
       <div class="timer-title"></div>
       <div class="timer-time">25:00</div>
       <br>
+      <!-- Unplanned Tasks Form -->
+      <form id="unplanned-task-form" class="clearfix input-group">
+        <label for="unplanned-input">Add Unplanned Task</label>
+        <input type="text" name="unplanned_task[title]" id="unplanned-input" class="form-control">
+      </form>
+      <br>
       <div class="timer-actions">
         <a href="#" class="task-begin-pomodoro btn btn-danger">Pomodoro</a>
         <a href="#" class="task-begin-sbreak btn btn-danger">Short Break</a>
