--- a/app/views/shared/_description.html
+++ b/app/views/shared/_description.html
@@ -15,7 +15,7 @@
 	How to Use:
 	<ul>
 		<li>Create Tasks under Lists </li>
-		<li>Hover over a Task and click the red arrow to move it to Today </li>
+		<li>Hover over a Task and click the list icon to move it to Today </li>
 		<li>Hover over a Task in Today and click the timer to start</li>
 		<li>Mark tasks complete as you get things done!</li>
 	</ul>
