--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -94,7 +94,7 @@ padding-left: 0px;
   margin-bottom: 0.75em;
 }
 
-#date-info, #tasksView-title  {
+#lists-header, #tasksView-title  {
   font-size: 20px;
   font-weight: 600;
   text-align: center;
@@ -118,11 +118,11 @@ ul#task-content li, ul#list-items li {
   #timer-window {
     z-index:1000;
     position:absolute;
-    top: -10%;
+    top: -20%;
     bottom: 10%;
     left: -200%;
     width: 400%;
-    height: 85vh;
+    height: 95vh;
     background:beige;
     opacity:0.85;
     -moz-opacity:0.85;
@@ -146,11 +146,11 @@ ul#task-content li, ul#list-items li {
   #timer-window {
     z-index:1000;
     position:absolute;
-    top: -60%;
+    top: -70%;
     bottom: 10%;
     left: 0%;
     width: 100%;
-    height: 85vh;
+    height: 95vh;
     background:beige;
     opacity:0.85;
     -moz-opacity:0.85;
@@ -174,11 +174,11 @@ ul#task-content li, ul#list-items li {
   #timer-window {
     z-index:1000;
     position:absolute;
-    top: -60%;
+    top: -70%;
     bottom: 10%;
     left: 0%;
     width: 100%;
-    height: 85vh;
+    height: 95vh;
     background:beige;
     opacity:0.85;
     -moz-opacity:0.85;
@@ -202,11 +202,11 @@ ul#task-content li, ul#list-items li {
   #timer-window {
     z-index:1000;
     position:absolute;
-    top: -60%;
+    top: -70%;
     bottom: 10%;
     left: 0%;
     width: 100%;
-    height: 60vh;
+    height: 80vh;
     background:beige;
     opacity:0.85;
     -moz-opacity:0.85;
@@ -214,13 +214,13 @@ ul#task-content li, ul#list-items li {
     }
     
   .timer-title {
-    margin-top: 15%;
+    margin-top: 5%;
     font-size: 36px;
-    margin-bottom: -16%;
+    margin-bottom: -10%;
   }
   
   .timer-time {
-    margin-top: 15%;
+    margin-top: 10%;
     font-size: 130px;
     margin-bottom: -8%;
   }
