Update Readme/App Description

--- a/app/views/shared/_description.html
+++ b/app/views/shared/_description.html
@@ -1,7 +1,7 @@
 <h1>Todoro</h1>
 <div class="todoro-description">
 	<p>
-		Todoro is a clone of <strong><a href="http://www.teamviz.com/downloads/">TeamViz</a></strong> built using <strong>Backbone</strong> and a restful <strong>Rails</strong> API.
+		Master the <strong><a href="http://pomodorotechnique.com/">Pomodoro Technique</a></strong> today! Built using <strong>Backbone</strong> and a restful <strong>Rails</strong> API.
 	</p>
 
 	Key Features:
